--- a/sonar-scanner.properties
+++ b/sonar-scanner.properties
@@ -2,7 +2,7 @@
 #No information about specific project should appear here
 
 #----- Default SonarQube server
-sonar.host.url=http://sonarqube-sonar2.app.os-training.magellancloud.com/
+sonar.host.url=http://sonarqube-sonarqube.app.os-cluster.magellancloud.com/
 
 #----- Default source code encoding
 sonar.sourceEncoding=UTF-8
