--- a/sonar-scanner.properties
+++ b/sonar-scanner.properties
@@ -34,7 +34,7 @@ sonar.issuesReport.console.enable=true
 # Comma-separated paths to directories with tests (optional)
 sonar.tests=src/test/java
 # This name depends on the configuration in pom.xml. In this example we have ${project.build.directory}/coverage-reports/jacoco-ut.exec entry in our pom.xml
-sonar.jacoco.reportPath=target/jacoco-ut.exec
+sonar.jacoco.reportPath=target/jacoco-ut.bat
 sonar.dynamicAnalysis=reuseReports
 sonar.java.coveragePlugin=jacoco
 sonar.jacoco.reportMissing.force.zero=true
